Improve colors and types
- Standardize generation of random colors, and avoid a parallel stream because it makes seeding the RNG for colors futile
- Generate detections if 1-channel (nucleus) output is specified